[package]
name = "rust-exploit"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = {version = "0.3.9",  features = [
    "minwindef",
    "handleapi",
    "fileapi",
    "winbase",
    "heapapi",
    "ntstatus",
    "securitybaseapi",
    "winerror",
    "processthreadsapi",
    "errhandlingapi",
    "winsvc",
    "memoryapi",
    "shellapi",
    "processenv",
    "namedpipeapi",
    "tlhelp32"
]}
widestring = "1.2"
ntapi = "0.4.1"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Environment",
    "Win32_System_WindowsProgramming",
    "Win32_System_Services",
    "Win32_System_Pipes"
] }